<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordorder.kearney.workorder.MainActivity">

    <TextView
        android:id="@+id/clientNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/client_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/clientNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/clientNameLabel"
        app:layout_constraintHorizontal_bias="0.818" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="322dp"
        android:text="@string/next_button"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectNameText" />

    <TextView
        android:id="@+id/projectNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:text="@string/project_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientNameLabel" />

    <EditText
        android:id="@+id/projectNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientNameText"
        app:layout_constraintLeft_toRightOf="@+id/projectNameLabel"
        app:layout_constraintHorizontal_bias="0.826" />

    <TextView
        android:id="@+id/changeOrderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_order"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/projectNameLabel" />

    <TextView
        android:id="@+id/requestedByLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requested_by"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/changeOrderLabel"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/subcontractorNameLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/sub_name"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/requestedByLabel"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/dateRequestedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_requested"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/subcontractorNameLabel"/>

    <TextView
        android:id="@+id/dateScheduledLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_scheduled"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/dateRequestedLabel"/>

    <EditText
        android:id="@+id/changeOrderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintLeft_toRightOf="@+id/changeOrderLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectNameText" />

    <EditText
        android:id="@+id/requestedByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintLeft_toRightOf="@+id/requestedByLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeOrderText" />

    <EditText
        android:id="@+id/subcontractorNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintLeft_toRightOf="@+id/subcontractorNameLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestedByText" />

    <EditText
        android:id="@+id/dateRequestedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintLeft_toRightOf="@+id/dateRequestedLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subcontractorNameText"/>

    <EditText
        android:id="@+id/dateScheduledText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintLeft_toRightOf="@+id/dateScheduledLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateRequestedText" />

</android.support.constraint.ConstraintLayout>
